fix spacing around add goal

--- a/src/goals/goals.css
+++ b/src/goals/goals.css
@@ -16,6 +16,11 @@
     float: left;
 }
 
+#goals-input {
+    margin-left: .5em;
+    margin-right: .5em;
+}
+
 #add-goal {
     flex: 1;
 }
